--- a/flaskapp/config.yml
+++ b/flaskapp/config.yml
@@ -13,3 +13,8 @@ articles:
         doi: 10.6084/M9.FIGSHARE.944593
         summary: Building upon my postgraduate research, I turned to a deeper analysis of Scottish journalism, namely the representations of colonial Australia in the early years of the nineteenth century. This article represents my first work on Scissors-and-Paste journalism.
         image: https://c2.staticflickr.com/8/7503/15795863409_f8a8bd3bd9_z.jpg
+    2:
+        title: Scissors and Paste, Edges and Nodes
+        doi: 10.6084/M9.FIGSHARE.944593
+        summary: Building upon the success of my research into representations of Australia, I wished to delve deeper into the networks that arose from Scissors-and-Paste practices. Institutional funding for training and equipment allowed me to develop new methodologies for determining not only reprinting, but directionality and branching within these networks.
+        image: https://pbs.twimg.com/media/Ca2cv37WAAApfSc.png
