Add third article

--- a/flaskapp/config.yml
+++ b/flaskapp/config.yml
@@ -15,6 +15,10 @@ articles:
         image: https://c2.staticflickr.com/8/7503/15795863409_f8a8bd3bd9_z.jpg
     2:
         title: Scissors and Paste, Edges and Nodes
-        doi: 10.6084/M9.FIGSHARE.944593
         summary: Building upon the success of my research into representations of Australia, I wished to delve deeper into the networks that arose from Scissors-and-Paste practices. Institutional funding for training and equipment allowed me to develop new methodologies for determining not only reprinting, but directionality and branching within these networks.
         image: https://pbs.twimg.com/media/Ca2cv37WAAApfSc.png
+    3:
+        title: "Rapunzel and the Ivory Tower: How Open Access Will Save the Humanities (from Themselves)"
+        doi: http://dx.doi.org/10.1080/13555502.2013.865977
+        summary: As I developed as a writer and researcher, I found myself increasingly concerned with the current publication ecosystem. This article, one of a four-part collection on open access within the humanities, consolidated my views on the ethical and practical impetus to move toward new publication models.
+        image: https://c2.staticflickr.com/6/5612/15567560315_fa15117bcc.jpg
