--- a/flaskapp/config.yml
+++ b/flaskapp/config.yml
@@ -9,17 +9,17 @@ user:
         gravatarhash: 40f65b0cb36ed0cfa1a6ce6eb9216eb3
 
 articles:
-    1:
+    10.6084/M9.FIGSHARE.944593:
         title: The Role of the Sydney Gazette in the Creation of Australia in the Scottish Public Sphere
         doi: 10.6084/M9.FIGSHARE.944593
         summary: Building upon my postgraduate research, I turned to a deeper analysis of Scottish journalism, namely the representations of colonial Australia in the early years of the nineteenth century. This article represents my first work on Scissors-and-Paste journalism.
         image: https://c2.staticflickr.com/8/7503/15795863409_f8a8bd3bd9_z.jpg
-    2:
-        title: Scissors and Paste, Edges and Nodes
-        summary: Building upon the success of my research into representations of Australia, I wished to delve deeper into the networks that arose from Scissors-and-Paste practices. Institutional funding for training and equipment allowed me to develop new methodologies for determining not only reprinting, but directionality and branching within these networks.
-        image: https://pbs.twimg.com/media/Ca2cv37WAAApfSc.png
-    3:
+    # 2:
+    #     title: Scissors and Paste, Edges and Nodes
+    #     summary: Building upon the success of my research into representations of Australia, I wished to delve deeper into the networks that arose from Scissors-and-Paste practices. Institutional funding for training and equipment allowed me to develop new methodologies for determining not only reprinting, but directionality and branching within these networks.
+    #     image: https://pbs.twimg.com/media/Ca2cv37WAAApfSc.png
+    10.1080/13555502.2013.865977:
         title: "Rapunzel and the Ivory Tower: How Open Access Will Save the Humanities (from Themselves)"
-        doi: http://dx.doi.org/10.1080/13555502.2013.865977
+        doi: 10.1080/13555502.2013.865977
         summary: As I developed as a writer and researcher, I found myself increasingly concerned with the current publication ecosystem. This article, one of a four-part collection on open access within the humanities, consolidated my views on the ethical and practical impetus to move toward new publication models.
         image: https://c2.staticflickr.com/6/5612/15567560315_fa15117bcc.jpg
